--- a/sales-data.ipynb
+++ b/sales-data.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "\n",
     "print(\"the unique categories are:\", unique_categories_str)\n",
-    "print(\"there are\", numunique_products, \"unique products\")"
+    "print(\"there are\", numunique_products, \"unique categories\")"
    ]
   },
   {
@@ -336,7 +336,6 @@
     "pd.set_option('display.max_columns', None)\n",
     "\n",
     "\n",
-    "# Display the pivot table\n",
     "print(pivot_table) "
    ]
   },
