--- a/sales-data.ipynb
+++ b/sales-data.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 204,
    "id": "d3cc8ecc-ead1-4e39-8d91-fa9161a4cf65",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
      "output_type": "stream",
      "text": [
       "the unique categories are: Clothing, Shoes, Books, Cosmetics, Food & Beverage, Toys, Technology, Souvenir\n",
-      "there are 8 unique products\n"
+      "there are 8 unique categories\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 206,
    "id": "aae8ec71-d0b7-451c-a39f-735382d164e8",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,6 @@
     ")\n",
     "\n",
     "pd.set_option('display.max_columns', None)\n",
-    "\n",
     "\n",
     "print(pivot_table) "
    ]
